# movie-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/common/: bot_commands.py  database_beckup.py
src/app/core/: config.py
src/app/database/: tables.py
src/app/database/queries/: bots.py  channels.py  user.py
src/app/database/queries/movie/: favorite_movies.py  feature_films.py  mini_series.py  series.py
src/app/dialog/: __init__.py  dialogs.py  geters.py  handlers.py
src/app/filters/: check_channel_sub.py  code.py
src/app/handlers/: __init__.py  start.py
src/app/handlers/admin/: __init__.py  broadcast.py  check.py  check_sub_channel.py  commands.py  mandatory_subs.py
src/app/handlers/admin/add_movie/: add_movie.py  feature_films.py  mini_series.py  series.py
src/app/handlers/admin/remove_movie/: remove_movie.py
src/app/handlers/user/: favorite_movies.py  movie_by_code.py  player.py
src/app/keyboards/: callback_data.py  inline.py
src/app/middleware/: __init__.py  database_pool.py
src/app/services/: broadcaster.py
src/app/settings/: bot_commands.py
src/app/states/: user_lang.py
src/app/states/admin/: admin.py  movie.py
