[project]
name = "movie-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiogram-dialog>=2.4.0",
    "asyncpg>=0.30.0",
    "colorlog>=6.10.1",
    "environs>=14.3.0",
    "pyyaml>=6.0.3",
]
